Add healthcheck of mysql db

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,6 +1,9 @@
 {
+  "ConnectionStrings": {
+    "MySql": "server=localhost; database=club; user=root; password=1234"
+  },
   "AppSettings": {
-    "Token":  "my top secret key"
+    "Token": "my top secret key"
   },
   "Logging": {
     "LogLevel": {
