feat: configure mysql

--- a/src/lori.backend.Web/appsettings.json
+++ b/src/lori.backend.Web/appsettings.json
@@ -1,7 +1,8 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\v11.0;Database=cleanarchitecture;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "SqliteConnection": "Data Source=database.sqlite"
+    "SqliteConnection": "Data Source=database.sqlite",
+    "MySqlConnection": "server=localhost; database=club; user=root; password=1234"
   },
   "Serilog": {
     "MinimumLevel": {
