feat: modify mysql connection string

--- a/src/lori.backend.Web/appsettings.json
+++ b/src/lori.backend.Web/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\v11.0;Database=cleanarchitecture;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqliteConnection": "Data Source=database.sqlite",
-    "MySqlConnection": "server=localhost; database=club; user=root; password=1234"
+    "MySqlConnection": "server=localhost; port=3306; database=lori; user=user; password=password"
   },
   "Serilog": {
     "MinimumLevel": {
