--- a/src/lori.backend.Web/Properties/launchSettings.json
+++ b/src/lori.backend.Web/Properties/launchSettings.json
@@ -18,10 +18,10 @@
     "lori.backend.Web": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "http://localhost:57679/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:57679/"
+      }
     }
   }
 }
