--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -44,4 +44,10 @@
     <PackageVersion Include="xunit" Version="2.4.2" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Update="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageVersion Update="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageVersion Update="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+    <PackageVersion Update="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+  </ItemGroup>
 </Project>
