--- a/.github/workflows/buildimage.yml
+++ b/.github/workflows/buildimage.yml
@@ -3,12 +3,6 @@ name: Build Docker Image
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "feature/ci-build-image" ]
-  pull_request:
-    branches: [ "feature/ci-build-image" ]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -17,31 +11,34 @@ env:
 
 jobs:
     docker:
-        runs-on: ubuntu-latest
-        steps:
-        -
-            name: Checkout
-            uses: actions/checkout@v3
-        -
-            name: Set up QEMU
-            uses: docker/setup-qemu-action@v2
-        -
-            name: Set up Docker Buildx
-            uses: docker/setup-buildx-action@v2
-            with:
-                driver-opts: network=host
-        -
-            name: Login to GitHub Container Registry
-            uses: docker/login-action@v2
-            with:
-                registry: ghcr.io
-                username: ${{ github.actor }}
-                password: ${{ secrets.GITHUB_TOKEN }}
-        -
-            name: Build and push
-            uses: docker/build-push-action@v4
-            with:
-                context: .
-                platforms: linux/amd64
-                push: true
-                tags: lori-backend:0.0.1-rc.1
+      permissions:
+        packages: write
+
+      runs-on: ubuntu-latest
+      steps:
+      -
+          name: Checkout
+          uses: actions/checkout@v3
+      -
+          name: Set up QEMU
+          uses: docker/setup-qemu-action@v2
+      -
+          name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+          with:
+              driver-opts: network=host
+      -
+          name: Login to GitHub Container Registry
+          uses: docker/login-action@v2
+          with:
+              registry: ghcr.io
+              username: ${{ github.actor }}
+              password: ${{ secrets.GITHUB_TOKEN }}
+      -
+          name: Build and push
+          uses: docker/build-push-action@v4
+          with:
+              context: .
+              platforms: linux/amd64
+              push: true
+              tags: lori-backend:0.0.1-rc.1
