--- a/.github/workflows/buildimage.yml
+++ b/.github/workflows/buildimage.yml
@@ -4,7 +4,7 @@ name: Build Docker Image
 # Controls when the workflow will run
 on:
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  workflow_dispatch
 
 env:
   LATEST_TAG: lori-backend:0.0.1-rc.1
