feat: add secrets to appsettings

--- a/src/lori.backend.Web/appsettings.json
+++ b/src/lori.backend.Web/appsettings.json
@@ -29,5 +29,10 @@
       //  }
       //}
     ]
+  },
+  "AppSettings": {
+    "Issuer": "lori",
+    "Audience":  "lori",
+    "Token": "this is my custom Secret key for authentication"
   }
 }
