--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -44,6 +44,7 @@
     <PackageVersion Include="SQLite" Version="3.13.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.Filters" Version="7.0.6" />
     <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="6.29.0" />
     <PackageVersion Include="xunit" Version="2.4.2" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
