ci: updated tag name to github-tag

--- a/.github/workflows/docker-s2i.yml
+++ b/.github/workflows/docker-s2i.yml
@@ -8,8 +8,8 @@ on:
       - '*'
 
 env:
-    TAG: lori-backend:0.0.1-rc.1
-    
+    TAG: lori-backend:${{ github.ref_name }}
+
 jobs:
     docker:
         permissions:
