--- a/src/lori.backend.Core/lori.backend.Core.csproj
+++ b/src/lori.backend.Core/lori.backend.Core.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Autofac" />
     <PackageReference Include="MediatR" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="MQTTnet" />
   </ItemGroup>
 
   <ItemGroup>
