--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -2,7 +2,7 @@ name: .NET Core
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop, ci-update-actions ]
   pull_request:
     branches: [ main ]
 
