--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -2,7 +2,9 @@ name: .NET Core
 
 on:
   push:
-    branches: [ develop, ci-update-actions ]
+    branches:
+      - develop
+      - ci-update-actions
   pull_request:
     branches: [ main ]
 
