--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - develop
-      - ci-update-actions
+      - feature/ci-update-actions
   pull_request:
     branches: [ main ]
 
