feat: extract connection config of mqtt service to appsettings

--- a/src/lori.backend.Web/appsettings.json
+++ b/src/lori.backend.Web/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=(localdb)\\v11.0;Database=cleanarchitecture;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqliteConnection": "Data Source=database.sqlite",
     "MySqlConnection": "server=localhost; port=3306; database=lori; user=user; password=password",
-    "MqttConnection": "server=broker.emqx.io; port=1883; clientId=lori.backend"
+    "MqttConnection": "server=localhost; port=1883; clientId=lori.backend"
   },
   "Serilog": {
     "MinimumLevel": {
