--- a/src/lori.backend.RobotMock/lori.backend.RobotMock.csproj
+++ b/src/lori.backend.RobotMock/lori.backend.RobotMock.csproj
@@ -1,4 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.1.3" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,4 +8,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" PrivateAssets="all" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\lori.backend.Infrastructure\lori.backend.Infrastructure.csproj" />
+  </ItemGroup>
 </Project>
