tests: added first version of unit test for orderService

--- a/tests/lori.backend.UnitTests/lori.backend.UnitTests.csproj
+++ b/tests/lori.backend.UnitTests/lori.backend.UnitTests.csproj
@@ -40,6 +40,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\lori.backend.Core\lori.backend.Core.csproj" />
+    <ProjectReference Include="..\..\src\lori.backend.Infrastructure\lori.backend.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
